2008-07-30  Marco Barisione  <marco.barisione@collabora.co.uk>

        Reviewed by Holger.

        http://bugs.webkit.org/show_bug.cgi?id=19742
        [GTK] Auto generate webkitmarshal.list

        Auto generate webkitmarshal.list from source files to reduce the
        number of conflicts when merging git branches or when applying
        patches.
        Also rename webkit-marshal.* to webkitmarshal.* for consistency.

        * webkit/webkitwebframe.cpp: Include webkitmarshal.h instead of
         webkit-marshal.h.
        * webkit/webkitwebview.cpp: Ditto.

2008-07-30  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Sam.

        https://bugs.webkit.org/show_bug.cgi?id=20205
        Typo in comment for bracer ending block

        * webkit/webkitprivate.cpp: Typo fix in comment for the brace
         that ends the WebKit namespace; WebCore -> WebKit

2008-07-26  Mark Rowe  <mrowe@apple.com>

        Build fix.  Changes to accommodate newly named/signatured loading methods in WebCore.

        * WebCoreSupport/FrameLoaderClientGtk.cpp:
        (WebKit::FrameLoaderClient::createFrame):

2008-07-17  Christian Dywan  <christian@twotoasts.de>

        Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=19813
        [GTK] WebKit crashes on invalid settings notify callback

        * webkit/webkitwebview.cpp: Disconnect in webkit_web_view_finalize

2008-07-08  Jan Michael Alonzo  <jmalonzo@webkit.org>

        Reviewed by Christian Dywan.

        Replace 'const' with G_CONST_RETURN macro to make it flexible to
        disable constness

        * webkit/webkitnetworkrequest.cpp:
        * webkit/webkitnetworkrequest.h:
        * webkit/webkitwebframe.cpp:
        * webkit/webkitwebframe.h:
        * webkit/webkitwebhistoryitem.cpp:
        * webkit/webkitwebhistoryitem.h:

2008-06-18  Marco Barisione  <marco.barisione@collabora.co.uk>

        Reviewed by Alp Toker.

        https://bugs.webkit.org/show_bug.cgi?id=19171