@@ -1,3 +1,10 @@
+2008-08-01  Wouter Bolsterlee  <uws@xs4all.nl>
+
+        https://bugs.webkit.org/show_bug.cgi?id=20035
+        [GTK] Fix return value for webkit_web_view_go_to_back_forward_item()
+
+        * webkit/webkitwebview.cpp:
+
 2008-07-30  Marco Barisione  <marco.barisione@collabora.co.uk>
 
         Reviewed by Holger.
